CI images update

--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-17 13:22:25
+lastsearch = 2024-07-17 16:47:16
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
 url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [demxanh.com]
-match = -28.6%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = -81.0%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = -85.7%%
@@ -167,9 +167,9 @@ title = Lịch thi đấu Euro 2024 hôm nay (18-6): Ronaldo xuất trận
 url = https://nbtv.vn/news/41096/lich-thi-dau-euro-2024-hom-nay-18-6-ronaldo-xuat-tran
 
 [vtv.vn]
-match = -38.1%%
-title = AI giúp người khiếm thị có thể xem phim
-url = https://vtv.vn/doi-song/ai-giup-nguoi-khiem-thi-co-the-xem-phim-20240617180158289.htm
+match = -133.3%%
+title = Mạng xã hội và những mối nguy với sức khỏe tinh thần của ...
+url = https://vtv.vn/suc-khoe/mang-xa-hoi-va-nhung-moi-nguy-voi-suc-khoe-tinh-than-cua-tre-20240717114258247.htm
 
 [store.steampowered.com]
 match = -66.7%%
@@ -217,9 +217,9 @@ title = 4 kết quả nổi bật trong triển khai Đề án 06/CP của Cục
 url = https://haiquanonline.com.vn/4-ket-qua-noi-bat-trong-trien-khai-de-an-06cp-cua-cuc-hai-quan-hai-phong-187440.html
 
 [bnews.vn]
-match = -104.8%%
-title = Từ 1/7 điều tra, thu thập thông tin về thực trạng kinh tế
-url = https://bnews.vn/tu-1-7-dieu-tra-thu-thap-thong-tin-ve-thuc-trang-kinh-te-xa-hoi-cua-53-dan-toc-thieu-so/338805.html
+match = -128.6%%
+title = LOTTE Mart áp dụng khuyến mãi, giảm giá nhiều sản phẩm ...
+url = https://bnews.vn/lotte-mart-ap-dung-khuyen-mai-giam-gia-nhieu-san-pham-thuong-hieu-lon/340797.html
 
 [phunutoday.vn]
 match = -52.4%%
@@ -333,8 +333,8 @@ url = https://dienmaycholon.com/may-lam-mat-quat-dieu-hoa
 
 [baoquangninh.vn]
 match = -133.3%%
-title = Sẵn sàng cho Đại hội đại biểu MTTQ tỉnh lần thứ XII, nhiệm ...
-url = https://baoquangninh.vn/san-sang-cho-dai-hoi-dai-bieu-mttq-tinh-lan-thu-xii-nhiem-ky-2024-2029-3307879.html
+title = Vụ 4 người Việt tử vong ở Thái Lan: Chuyên gia trang điểm ...
+url = https://baoquangninh.vn/vu-4-nguoi-viet-tu-vong-o-thai-lan-chuyen-gia-trang-diem-dinh-phu-qua-doi-o-tuoi-37-3309376.html
 
 [www.erav.vn]
 match = -138.1%%
@@ -365,4 +365,9 @@ url = https://aztax.com.vn/dich-vu-lam-ho-chieu-nhanh-tai-quang-ngai/
 match = -52.4%%
 title = EURO 2024: Tây Ban Nha ca khúc khải hoàn
 url = https://baoquangngai.vn/the-thao/202407/euro-2024-tay-ban-nha-ca-khuc-khai-hoan-f152051/
+
+[tienphong.vn]
+match = -76.2%%
+title = Mẹ chuyên gia trang điểm Đình Phú sốc, ngất xỉu
+url = https://tienphong.vn/vu-4-nguoi-viet-tu-vong-o-thai-lan-me-chuyen-gia-trang-diem-dinh-phu-soc-ngat-xiu-post1655723.tpo
 
