--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-17 15:22:41
+lastsearch = 2024-07-17 16:44:47
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -21.4%%
-title = Louise Laurent
-url = https://profiles.ucsd.edu/louise.laurent
+match = -15.0%%
+title = Robert Weinreb - UCSD Profiles
+url = https://profiles.ucsd.edu/robert.weinreb
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 5.3%%
-title = Timothy Henrich, MD
-url = https://profiles.ucsf.edu/timothy.henrich
+match = 0.0%%
+title = Joel Palefsky, MD
+url = https://profiles.ucsf.edu/joel.palefsky
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -63,8 +63,8 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = 0.0%%
-title = Stanley F Nelson
-url = https://profiles.ucla.edu/stanley.nelson
+title = Daniel H Geschwind
+url = https://profiles.ucla.edu/daniel.geschwind
 
 [www.sec.gov]
 match = -20.0%%
@@ -87,9 +87,9 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -150.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
+match = -145.0%%
+title = Antonio Jimeno, MD, PhD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/3752
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -355,4 +355,14 @@ url = https://www.jlab.org/sites/default/files/magnet-group/materials/cryogenic_
 match = -90.0%%
 title = ACS TQIP BEST PRACTICES GUIDELINES IN IMAGING
 url = https://www.facs.org/media/oxdjw5zj/imaging_guidelines.pdf
+
+[med.emory.edu]
+match = -150.0%%
+title = Viraj Master, MD, PhD - Profile | Emory School of Medicine
+url = https://med.emory.edu/directory/profile/?u=VMASTER
+
+[labs.utsouthwestern.edu]
+match = -135.0%%
+title = Publications | Beckham Lab | UT Southwestern, Dallas, ...
+url = https://labs.utsouthwestern.edu/beckham-lab/publications
 
