--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-17 11:22:43
+lastsearch = 2024-07-17 16:44:00
 
 [everonvn.com.vn]
-match = 7.4%%
-title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
+match = -74.1%%
+title = Ep1639, Bảng giá bộ chăn ga gối Everon Hàn Quốc, Ep 1639
+url = https://everonvn.com.vn/everon/462/everon-ep1639
 
 [everon.com.vn]
 match = 40.0%%
@@ -18,8 +18,8 @@ url = https://everon.com.vn/epm-19064/
 
 [demxanh.com]
 match = 18.5%%
-title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
+title = Bộ chăn ga gối Everon EPM19064
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19064.html
 
 [shopee.vn]
 match = -48.1%%
@@ -33,8 +33,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [sieuthidemhanquoc.com.vn]
 match = 14.8%%
-title = Bộ chăn ga gối Everon ESM-19016
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-19016-1485
+title = Bộ chăn ga gối Everon ESM-19015
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-19015-1484
 
 [everonvietnam.com]
 match = 36.0%%
@@ -100,4 +100,9 @@ url = https://forums.dansdeals.com/index.php?topic=110702.0
 match = -33.3%%
 title = Aegean Leather Oversized Fountain Pen Case
 url = https://www.youtube.com/watch?v=ge-8pHMQi9Y
+
+[www.fountainpennetwork.com]
+match = -100.0%%
+title = Fs: Aurora 88 Slim, Bexley Americana, Pilot Ice Blue Vp Le, ...
+url = https://www.fountainpennetwork.com/forum/topic/192106-fs-aurora-88-slim-bexley-americana-pilot-ice-blue-vp-le-montblanc-classic-old-parker-duofold-box/
 
