--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-17 15:52:23
+lastsearch = 2024-07-17 16:47:59
 
 [everon.online]
 match = -29.4%%
@@ -13,8 +13,8 @@ url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESM-22014 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esm22014.html
+title = Everon EPT-24081 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-ept24081.html
 
 [nem.vn]
 match = 5.9%%
