--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-17 15:32:14
+lastsearch = 2024-07-17 16:48:56
 
 [www.youtube.com]
-match = -147.4%%
-title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
-url = https://www.youtube.com/watch?v=ASsdVo0WBew
+match = -121.1%%
+title = Cây hoa mộc hương sau 2 tháng tạo tán cây đã rất đẹp
+url = https://www.youtube.com/watch?v=Z5dWoPtuKqA
 
 [trangtrisanvuon.vn]
 match = -147.4%%
