--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-17 15:50:12
+lastsearch = 2024-07-17 16:46:24
 
 [chieutrucsaigon.com]
-match = 33.3%%
-title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 12
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-viet-nam-quan-12-104.html
+match = 8.3%%
+title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
 
 [demxanh.com]
 match = -8.3%%
