--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-17 16:23:43
+lastsearch = 2024-07-17 17:13:58
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Bộ ga gối chun chan happy 16
 url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 
 [www.facebook.com]
-match = -27.8%%
-title = Happiness Việt Nam
-url = https://www.facebook.com/changahappinessvn/
+match = 9.5%%
+title = Chăn Ga Gối Đệm GRAND
+url = https://www.facebook.com/grandhanhphucgiandon/
 
 [shopee.vn]
-match = -21.4%%
-title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ ga chun poly
+match = -17.9%%
+title = chăn ga gối - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
+url = https://shopee.vn/list/chăn ga gối
 
 [chandem.com.vn]
 match = 21.4%%
@@ -110,4 +110,9 @@ url = https://uannga.vn/index.php/shops/Chan-Ga-Dreamland/bo-ga-chun-chan-modar-
 match = 17.4%%
 title = Chăn Ga Chun - ĐỆM VIỆT
 url = https://demviet.vn/chan-ga-chun
+
+[ngungon.com]
+match = 13.3%%
+title = Bộ Ga Chun Chần
+url = https://ngungon.com/danh-muc-san-pham/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan/
 
