--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-17 14:34:15
+lastsearch = 2024-07-17 17:16:34
 
 [dongagroup.vn]
 match = -272.7%%
@@ -22,9 +22,9 @@ title = Giường tầng sắt
 url = https://noithatduongdong.com/giuong-tang-sat
 
 [giuonggaphoaphat.com]
-match = -81.8%%
-title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
-url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
+match = -27.3%%
+title = Giuonggaphoaphat.com
+url = http://giuonggaphoaphat.com/
 
 [tunhuamiennam.com]
 match = -172.7%%
@@ -87,9 +87,9 @@ title = Giường 2 M Giá Tốt T05/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/giuong-2-m/?innerlink=hot_v1&page=2
 
 [tiki.vn]
-match = -200.0%%
-title = Giường 1m2 x 2m hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=giường 1m2 x 2m
+match = -181.8%%
+title = Giường 2mx2m2 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
 match = -281.8%%
