--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,21 +4,21 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-17 16:23:20
+lastsearch = 2024-07-17 17:35:02
 
 [www.diepxuan.com]
-match = -27.3%%
-title = Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
+match = -72.7%%
+title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
-match = -68.2%%
-title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 ...
-url = https://shopee.vn/Bộ-Ga-Gối-Nỉ-Nhung-COCO-in-Nổi-Hoạ-Tiết-Mẫu-Mới-2023-Chất-Liệu-Dày-Dặn-Mềm-Mịn-Ấm-Áp-Cao-Cấp-Giữ-Nhiệt-Tốt-i.29708084.23159379927
+match = 13.6%%
+title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
+url = https://shopee.vn/product/494447407/24864025138
 
 [m.facebook.com]
-match = -13.6%%
-title = H&T Bedding - Tổng Kho Phân Phối
+match = -100.0%%
+title = Bùng nổ với Ga Gối Coco... - H&T Bedding - Tổng Kho Phân Phối
 url = https://m.facebook.com/story.php/?story_fbid=222482430873756&id=100093360007450
 
 [hanvico.com.vn]
@@ -67,9 +67,9 @@ title = Chăn ga gối cho nam và sự bất tử của họa tiết sọc kẻ
 url = https://songhonghanoi.vn/chan-ga-goi-cho-nam-va-su-bat-tu-cua-hoa-tiet-soc-ke.html
 
 [www.facebook.com]
-match = -22.7%%
-title = chăn ga gối cực rẻ ( lấy hàng tại xưởng)
-url = https://www.facebook.com/groups/484973875009067/
+match = -81.8%%
+title = Chiếu điều hoà (chiếu mây), chiếu tre, chăn-ga-gối
+url = https://www.facebook.com/groups/151776543537474/posts/-coco-2024️-chiếu-bọc-chun-mới-nhất-của-coco-siêu-bắt-mắt-với-thiết-kế-mới-nhất️/775069884541467/
 
 [foreverbedding.net]
 match = -18.2%%
