--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-17 15:19:53
+lastsearch = 2024-07-17 17:32:46
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -22,14 +22,14 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 0.0%%
+title = Serggio Lanata, MD, MS
+url = https://profiles.ucsf.edu/serggio.lanata
 
 [www.ncbi.nlm.nih.gov]
 match = -168.4%%
-title = An integrative review of physical activity in adults with ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8831770/
+title = Review of influenza-associated pulmonary aspergillosis in ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -41.7%%
+title = Tommi Gaines
+url = https://profiles.ucsd.edu/tommi.gaines
 
 [medboard.nv.gov]
 match = -100.0%%
@@ -72,9 +72,9 @@ title = Politics, Policy, Political News - POLITICO
 url = https://www.politico.com/
 
 [som.cuanschutz.edu]
-match = -110.5%%
-title = Larry Allen, MD Professor, Medicine-Cardiology
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/13824
+match = -163.2%%
+title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [cpr.heart.org]
 match = -94.7%%
@@ -360,4 +360,9 @@ url = https://escholarship.org/content/qt5m08010r/qt5m08010r.pdf?t=rf9hyz
 match = -152.6%%
 title = Climate Change 2007: Impacts, Adaptation and Vulnerability
 url = https://www.ipcc.ch/site/assets/uploads/2018/03/ar4_wg2_full_report.pdf
+
+[www.odu.edu]
+match = 5.3%%
+title = Faculty Publications
+url = https://www.odu.edu/library/faculty-publications
 
