--- a/images/bo-chan-ga-goi-sensy18-190/config.ini
+++ b/images/bo-chan-ga-goi-sensy18-190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sensy18-190.html
 lastopen = 2024-06-09 23:37:19
 
 [search]
-lastsearch = 2024-07-17 16:16:34
+lastsearch = 2024-07-17 18:17:48
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -52,9 +52,9 @@ title = Caldo Verde - Portuguese Kale Soup
 url = https://thebarefootkitchenwitch.typepad.com/the_barefoot_kitchen_witc/2009/10/calo-verde-portuguese-kale-soup.html
 
 [www.pinterest.com]
-match = -61.5%%
-title = How to Make Salteñas (Bolivian Hand Pies) From Scratch
-url = https://www.pinterest.com/pin/246572148335041915/
+match = -38.5%%
+title = Macadamia Nut Shortbread | Haupia recipe ...
+url = https://www.pinterest.com/pin/macadamia-nut-shortbread--845339792581504105/
 
 [thuyancom.blogspot.com]
 match = -19.2%%
