--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-17 16:15:05
+lastsearch = 2024-07-17 18:14:24
 
 [tiki.vn]
 match = -138.9%%
 title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -183.3%%
-title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
+match = -188.9%%
+title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -67,9 +67,9 @@ title = Everon Chính hãng Hàn Quốc, Cửa hàng trực tuyến
 url = https://shopee.vn/everonvietnamchinhhang
 
 [draphoangcuong.xim.tv]
-match = -116.7%%
-title = Bộ drap phủ Everon RORBOT (160x200) Giá: 4.027.000 VNĐ
-url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-everon-rorbot-160x200-gia-4-027-000-vnd-sp202152.html
+match = -100.0%%
+title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
+url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
 match = 33.3%%
