--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-17 14:31:02
+lastsearch = 2024-07-17 18:19:22
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -22,14 +22,14 @@ title = Effect of the COVID-19 Outbreak on the Incidence of Other ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8994859/
 
 [thuvienphapluat.vn]
-match = -82.6%%
-title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
-url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
+match = -78.3%%
+title = Chỉ thị 18/CT-UBND 2019 xử lý vi phạm đề điều quản ...
+url = https://thuvienphapluat.vn/van-ban/Tai-nguyen-Moi-truong/Chi-thi-18-CT-UBND-2019-xu-ly-vi-pham-de-dieu-quan-ly-bai-song-bai-trieu-ven-bien-tinh-Thai-Binh-429663.aspx
 
 [sotuphap.thaibinh.gov.vn]
-match = 17.4%%
-title = THÔNG BAO DAU GIA TAI SAN Qn 10)
-url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220927/TBNY_so_16_10_Hd13-2022_cua_Ngan_hang_NN_PTNT_Viet_Nam_chi_nhanh_huyen_Tien_Hai_Thai_Binh__lan_10__94ebf.pdf
+match = -47.8%%
+title = sO ill PHAP THAI BINH TRUNG TAM DVDG TAI sAN ...
+url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220310/TBNY_so_08_Hd07-2022_cua_Cuc_Quan_ly_thi_truong_tinh_Thai_Binh_ff927.pdf
 
 [www.youtube.com]
 match = 0.0%%
@@ -67,9 +67,9 @@ title = Thái Bình: Phải sớm khắc phục những tồn tại, hạn chế
 url = https://sonoivu.thaibinh.gov.vn/van-ba-n-chi-da-o-die-u-ha-nh/chuyen-doi-so/thai-binh-phai-som-khac-phuc-nhung-ton-tai-han-che-trong-thu.html
 
 [www.facebook.com]
-match = -113.0%%
-title = TikToker Bình Yên casting Rap Việt 2024 chứng minh tuổi tác ...
-url = https://www.facebook.com/VieNETWORKDatVietVAC/videos/tiktoker-bình-yên-casting-rap-việt-2024-chứng-minh-tuổi-tác-không-là-vấn-đề-rap-/1003673654470670/
+match = 38.9%%
+title = VIỆC LÀM THÁI BÌNH
+url = https://www.facebook.com/groups/220153782875767/
 
 [lpbank.com.vn]
 match = -200.0%%
@@ -340,4 +340,9 @@ url = https://en.tripadvisor.com.hk/Restaurant_Review-g40922-d25361618-Reviews-K
 match = -91.3%%
 title = PROPACK VIETNAM 2024 - Many privileges for exhibitors
 url = https://www.hastingstribune.com/vietfood-beverage---propack-vietnam-2024---many-privileges-for-exhibitors/article_5d7a9e25-8599-54ea-b5bb-9f4932912b6e.html
+
+[mof.gov.vn]
+match = -8.7%%
+title = Thai Binh 27/11/2008 10:39:00 338
+url = https://mof.gov.vn/webcenter/portal/btcen/pages_r/l/newsdetails?dDocName=?dDocName=BTC074914&dID=98692
 
