--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-07-17 14:49:21
+lastsearch = 2024-07-17 18:12:50
 
 [www.diepxuan.com]
-match = 42.4%%
-title = Điệp Xuân Chiếu nhựa Hà Nội 180x300
+match = 48.5%%
+title = Chiếu nhựa Hà Nội 180x300 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html
 
 [shopee.vn]
