--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-17 16:30:55
+lastsearch = 2024-07-17 18:14:41
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -205.9%%
-title = If an HOA in state does not enforce its rules for a certain ...
-url = https://www.justanswer.com/real-estate-law/mdrrw-hoa-state-does-not-enforce-its-rules-certain.html
+match = -170.6%%
+title = Florida HOA. Are HOAs still able to enter properties ...
+url = https://www.justanswer.com/real-estate-law/ax7ur-florida-hoa-hoas-able-enter-properties.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -170.6%%
-title = Original Video of Hoa Guy Fines Neighbor for to Many ...
-url = https://www.tiktok.com/discover/Original-video-of-hoa-guy-fines-neighbor-for-to-many-packages-on-porch?lang=en
+match = -82.4%%
+title = I need advice #lawyer #hoa #taylorswift
+url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
 
 [www.steadily.com]
 match = 0.0%%
