--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-17 17:51:17
+lastsearch = 2024-07-17 18:16:50
 
 [shopee.vn]
-match = -146.7%%
-title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ thảm trải ghế
+match = -126.7%%
+title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [ghedagiago.com]
-match = -166.7%%
-title = Bảng Giá Bàn Ghế Đá Năm 2024 [Cập Nhật 1 Giờ Trước]
-url = https://ghedagiago.com/bang-gia-bo-ban-ghe-da-san-vuon/
+match = -146.7%%
+title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
+url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
 
 [ghedatruongan.com]
 match = -80.0%%
