--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-07-17 15:33:33
+lastsearch = 2024-07-17 18:32:48
 
 [www.dem365.vn]
 match = -81.0%%
@@ -37,9 +37,9 @@ title = Câu cá, ưu và nhược điểm của dùng hạt chặn và dùng ch
 url = https://www.youtube.com/watch?v=47iqz2ImKhc
 
 [www.lazada.vn]
-match = 23.8%%
-title = Hạt chặn phao giá rẻ vỉ 15 hạt
-url = https://www.lazada.vn/products/hat-chan-phao-gia-re-vi-15-hat-i1777280101.html
+match = -76.2%%
+title = Chăn Mền Phao Giá Tốt T06/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chan-men-phao/
 
 [docauquanghuy.com]
 match = -9.5%%
