--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-17 18:15:33
+lastsearch = 2024-07-17 18:29:23
 
 [www.lazada.vn]
 match = -94.4%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -150.0%%
-title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
-url = https://www.facebook.com/sieuthinem267/
+match = -22.2%%
+title = Tatana - Nệm Drap Gối Cao Cấp
+url = https://www.facebook.com/tatana.vn/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = Tipps and Tricks - How to make CHA GIO - Authentic ...
 url = https://www.youtube.com/watch?v=YdTLFfXiGMk
 
 [www.tiktok.com]
-match = -133.3%%
-title = 📍nem chua rán: 230 ngõ chợ khâm thiên. ⭐️: 6-15 cành ...
-url = https://www.tiktok.com/@longlongneee/video/7298670033461431570
+match = -105.6%%
+title = Dolce Gabbana Light Blue Intense Bargello Kodu
+url = https://www.tiktok.com/discover/dolce-gabbana-light-blue-intense-bargello-kodu
 
 [vi.wikipedia.org]
 match = -72.2%%
