--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-17 17:16:23
+lastsearch = 2024-07-17 18:30:07
 
 [everonvn.com.vn]
 match = -12.5%%
@@ -17,9 +17,9 @@ title = Tấm trải - Topper
 url = https://everonthaiha.com/nhom-san-pham/309/tam-trai-topper.html
 
 [kbedding.vn]
-match = -41.7%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
-url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
+match = -54.2%%
+title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
+url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
 
 [everon.online]
 match = -8.3%%
@@ -27,8 +27,8 @@ title = Topper Everon - Tấm Tăng Tiện Nghi
 url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
-match = -37.5%%
-title = Tấm Trải đa Năng Everon Giá Tốt T06/2024 - Lazada
+match = 0.0%%
+title = Tấm Trải đa Năng Everon Giá Tốt T06/2024
 url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
 
 [www.everonvn.vn]
