--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-17 16:52:34
+lastsearch = 2024-07-17 18:25:34
 
 [shopee.vn]
 match = -52.4%%
@@ -160,4 +160,9 @@ url = https://demxanh.com/nem-tot-nhat-cho-khung-giuong.html
 match = 4.8%%
 title = Giường ngủ đơn TM-G21001
 url = https://noithattamy.com/giuong-ngu-don-1m2-tm-g21001
+
+[erado.vn]
+match = -19.0%%
+title = Giường ngủ vải phối da mã G-AT11
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-vai-phoi-da-ma-g-at11.html
 
