CI images update

--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-17 12:12:58
+lastsearch = 2024-07-17 18:44:23
 
 [www.tiktok.com]
-match = -231.2%%
-title = Reverse Corrector #beautytok #makeuphacks #colorcorection ...
-url = https://www.tiktok.com/@hudabeauty/video/7378924653521177898
+match = -200.0%%
+title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
+url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
 
 [digitalmaine.com]
 match = -75.0%%
@@ -195,4 +195,9 @@ url = https://m.hotbikinicamvideo.com/blogs/lrrxzabx-255/
 match = -200.0%%
 title = LV Frame Flat Mule - alchemy311.com - gucci down jacket
 url = https://www.alchemy311.com/blogs/gnlcenqu-283/
+
+[globalmaxhosting.com]
+match = -212.5%%
+title = multiple return in python - bolsa pequena da louis vuitton
+url = https://globalmaxhosting.com/blogs/tyonogkq-277//
 
