--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-17 17:16:34
+lastsearch = 2024-07-17 18:51:55
 
 [dongagroup.vn]
 match = -272.7%%
@@ -142,8 +142,8 @@ title = Đặt vé xe giường nằm đôi đi Đắk Lắk từ Sài Gòn giá
 url = https://vexere.com/vi-VN/ve-xe-giuong-nam-doi-tu-sai-gon-di-dak-lak-129t1161.html
 
 [bentreriverside.com]
-match = -81.8%%
-title = SUITE Hướng Phố 2 Giường Đơn
+match = -290.9%%
+title = SUITE Hướng Phố 2 Giường Đơn - Ben Tre Riverside ...
 url = https://bentreriverside.com/en/room/suite-huong-pho-2-giuong-don/
 
 [thegioigiuonggap.com]
@@ -167,9 +167,9 @@ title = Nệm cho giường 1 2 3 tay quay cao cấp
 url = https://giuongbenh.vn/nem-cho-giuong-1-2-3-tay-quay-cao-cap.html
 
 [www.ykhoakimyen.com]
-match = -172.7%%
-title = Giường kéo cột sống lung 2 khúc TJM-GK01
-url = https://www.ykhoakimyen.com/chi-tiet/giuong-keo-cot-song-lung-2-khuc-tjm-gk01.html
+match = -227.3%%
+title = Giường kéo cột sống lưng + kéo cổ M2 PN34LCS.2
+url = https://www.ykhoakimyen.com/chi-tiet/giuong-keo-cot-song-lung-keo-co-m2-pn34lcs-2.html
 
 [www.igea.com.vn]
 match = -309.1%%
