--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-17 15:19:06
+lastsearch = 2024-07-17 18:49:21
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
-match = -280.0%%
-title = The Letter to Ren An and Sima Qian’s Legacy
-url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsiLUetZd&sig=ACfU3U3LC5b8gXAkB0r7paMnoMJ_FIFOAg&hl=en&sa=X&ved=2ahUKEwit7qft0a2HAxV1FFkFHaUdCysQ6AF6BAgYEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfkIJuo6&sig=ACfU3U1lcVoriA7CrBLSb928KdEdx8g0OA&hl=en&sa=X&ved=2ahUKEwjG5sTsgK6HAxUd4ckDHcIjCl4Q6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
