--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-17 14:29:08
+lastsearch = 2024-07-17 18:44:43
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -156.2%%
-title = Gloss for life - #beautytok - #hudabeauty - #lip
-url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
+match = -75.0%%
+title = As Warm As Fire Final Episode Ending
+url = https://www.tiktok.com/discover/as-warm-as-fire-final-episode-ending
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -37,9 +37,9 @@ title = Điệp Xuân Chăn ga gối đệm Điệp Xuân
 url = https://diepxuan.com/
 
 [www.facebook.com]
-match = -143.8%%
-title = Tiếp tục những cung đường... #thixagiarai ...
-url = https://www.facebook.com/thixaGiaRaiBL/videos/tiếp-tục-những-cung-đường-thixagiarai-giaraiquehuongtoi/433333748972674/
+match = -25.0%%
+title = Chăn ga gối đệm Điệp Xuân
+url = https://www.facebook.com/diepxuanco/?locale=nb_NO
 
 [www.griffingouldwebsite.com]
 match = -43.8%%
@@ -155,4 +155,9 @@ url = https://www.lemon8-app.com/an_nie/7208139846819316225?region=vn
 match = -212.5%%
 title = multiple return in python - bolsa pequena da louis vuitton
 url = https://globalmaxhosting.com/blogs/tyonogkq-277//
+
+[m.aquaserviecuador.com]
+match = -125.0%%
+title = armani ar5905 - More - aquaserviecuador.com
+url = https://m.aquaserviecuador.com/blogs/prwdicng-264/
 
