--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-17 18:19:22
+lastsearch = 2024-07-17 19:58:04
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -22,14 +22,14 @@ title = Effect of the COVID-19 Outbreak on the Incidence of Other ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8994859/
 
 [thuvienphapluat.vn]
-match = -78.3%%
-title = Chỉ thị 18/CT-UBND 2019 xử lý vi phạm đề điều quản ...
-url = https://thuvienphapluat.vn/van-ban/Tai-nguyen-Moi-truong/Chi-thi-18-CT-UBND-2019-xu-ly-vi-pham-de-dieu-quan-ly-bai-song-bai-trieu-ven-bien-tinh-Thai-Binh-429663.aspx
+match = -82.6%%
+title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
+url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
 
 [sotuphap.thaibinh.gov.vn]
-match = -47.8%%
-title = sO ill PHAP THAI BINH TRUNG TAM DVDG TAI sAN ...
-url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220310/TBNY_so_08_Hd07-2022_cua_Cuc_Quan_ly_thi_truong_tinh_Thai_Binh_ff927.pdf
+match = 17.4%%
+title = THÔNG BAO DAU GIA TAI SAN Qn 10)
+url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220927/TBNY_so_16_10_Hd13-2022_cua_Ngan_hang_NN_PTNT_Viet_Nam_chi_nhanh_huyen_Tien_Hai_Thai_Binh__lan_10__94ebf.pdf
 
 [www.youtube.com]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -139.1%%
-title = Vietnam Travel Map Eighth Edition - Page 20 - Google Books Result
-url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA20&lpg=PA20&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz1PlfgTB&sig=ACfU3U0Pzuf3F2Vm28zZSfih7xrFQtbgvA&hl=en&sa=X&ved=2ahUKEwjai6imva2HAxVwnokEHcz8Bn0Q6AF6BAgiEAM
+match = -47.8%%
+title = World History Encyclopedia: [21 volumes]
+url = https://books.google.com/books?id=s5X3EAAAQBAJ&pg=RA10-PA318&lpg=RA10-PA318&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=R7DNeobNvk&sig=ACfU3U1O6vhfdUqGLwDBwJdUVIc9dD4__w&hl=en&sa=X&ved=2ahUKEwiz_96akK6HAxU3J0QIHciPDDoQ6AF6BAgiEAM
 
 [www.travelweekly.com]
 match = -87.0%%
