--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-17 18:13:53
+lastsearch = 2024-07-17 19:57:17
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -106.7%%
-title = Đèn Led mắt ếch HT 8091 14W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/me91-14-t-v-tt-ht-light-level
+match = -146.7%%
+title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
 
 [www.facebook.com]
 match = -180.0%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 - HT Max Light
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -193.3%%
-title = Trị bệnh TIỂU ĐƯỜNG Không Cần Dùng Thuốc ( Mới Nhất ...
-url = https://www.youtube.com/watch?v=1Qq1CgIdHRM
+match = -233.3%%
+title = Tin Buổi Sáng - Ngày 14/07/2024 - HTV Tin Tức Mới Nhất ...
+url = https://www.youtube.com/watch?v=z-ABxLf4agM
 
 [dauthau.asia]
 match = -240.0%%
