--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-17 18:13:01
+lastsearch = 2024-07-17 20:01:32
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,14 +12,14 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -64.7%%
-title = How I gutted my HOA : r/pettyrevenge
-url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
+match = -200.0%%
+title = My condo HOA has an outright ban on any kids living in the ...
+url = https://www.reddit.com/r/legaladvice/comments/11a9d9s/my_condo_hoa_has_an_outright_ban_on_any_kids/
 
 [www.quora.com]
-match = -182.4%%
-title = HOA founded after I bought my house. Can I be forced to ...
-url = https://www.quora.com/HOA-founded-after-I-bought-my-house-Can-I-be-forced-to-join
+match = -176.5%%
+title = Is it legal for a Florida HOA president to hire and pay ...
+url = https://www.quora.com/Is-it-legal-for-a-Florida-HOA-president-to-hire-and-pay-himself-as-a-Handyman-for-the-community-of-which-he-is-the-HOA-President
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -82.4%%
-title = I need advice #lawyer #hoa #taylorswift
-url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
+match = -170.6%%
+title = Original Video of Hoa Guy Fines Neighbor for to Many ...
+url = https://www.tiktok.com/discover/Original-video-of-hoa-guy-fines-neighbor-for-to-many-packages-on-porch?lang=en
 
 [www.21alivenews.com]
 match = -123.5%%
