CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-17 17:52:18
+lastsearch = 2024-07-17 20:32:08
 
 [www.youtube.com]
 match = -48.0%%
@@ -37,9 +37,9 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [trithucvn.co]
-match = -88.0%%
-title = Đài Loan cảnh giác với 'làn sóng' thử tên lửa tại miền bắc ...
-url = https://trithucvn.co/the-gioi/dai-loan-canh-giac-voi-lan-song-thu-ten-lua-tai-mien-bac-trung-quoc.html
+match = -76.0%%
+title = Ông Trump nói Đài Loan phải trả tiền cho Mỹ để được bảo ...
+url = https://trithucvn.co/the-gioi/ong-trump-noi-dai-loan-phai-tra-tien-cho-my-de-duoc-bao-ve-khoi-trung-quoc.html
 
 [books.google.com]
 match = -84.0%%
@@ -395,4 +395,9 @@ url = http://tcns.ntt.edu.vn/Video/5571716
 match = -80.0%%
 title = Vụ 292 du khách bị bỏ rơi ở Phú Quốc: Công ty Đài Loan ...
 url = https://kevevn.vn/20240218/vu-292-du-khach-bi-bo-roi-o-phu-quoc-cong-ty-dai-loan-tuyen-bo-pha-san-bi-to-lua-dao-28225754.html
+
+[vn.taiwantoday.tw]
+match = -66.7%%
+title = Taiwan Today
+url = https://vn.taiwantoday.tw/
 
