--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-17 20:18:10
+lastsearch = 2024-07-17 20:38:19
 
 [dongagroup.vn]
 match = -272.7%%
@@ -59,7 +59,7 @@ url = https://shopdogothachthat.com/m/64/174/Combo-giuong-tu-2m
 [ifurni.vn]
 match = 0.0%%
 title = Giường bọc nệm HELEN 2
-url = https://ifurni.vn/san-pham/giuong-boc-nem-eda-1564.html
+url = https://ifurni.vn/san-pham/giuong-boc-nem-helen-2-1564.html
 
 [shopee.vn]
 match = -290.9%%
@@ -92,9 +92,9 @@ title = Giường 1m2 x 2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1m2 x 2m
 
 [www.facebook.com]
-match = -318.2%%
-title = Có bán Khung giường bằng kim loại tại Mankato, Minnesota
-url = https://www.facebook.com/marketplace/mankato/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Giường & khung giường đơn tiêu chuẩn tại ...
+url = https://www.facebook.com/marketplace/mankato/full-size-beds/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -107,8 +107,8 @@ title = Zinus: Shop Mattresses, Bed Frames & Sofas
 url = https://www.zinus.com/
 
 [pamed.com.vn]
-match = -409.1%%
-title = MN-G2CN - Giường 2 chức năng | Pamed – Trang thiết bị, vật tư y tế
+match = -145.5%%
+title = MN-G2CN - Giường 2 chức năng - Pamed
 url = https://pamed.com.vn/mn-g2cn-giuong-2-chuc-nang
 
 [www.nitrc.org]
