--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-clfi.html
 lastopen = 2024-06-06 17:09:48
 
 [search]
-lastsearch = 2024-07-17 20:00:27
+lastsearch = 2024-07-17 20:38:07
 
 [www.everonvn.vn]
 match = 29.6%%
@@ -12,8 +12,8 @@ title = ĐỆM LÒ XO EVERON, KING KOIL
 url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [everonvn.com.vn]
-match = 34.1%%
-title = Đệm Lò Xo Everon, King Koil 【 🥇Giảm 20%% 】HàngChính ...
+match = 31.7%%
+title = Đệm Lò Xo Everon, King Koil 【 Giảm 20%% 】HàngChính Hãng
 url = https://everonvn.com.vn/23/dem-lo-xo-everon
 
 [everonkorea.com]
@@ -34,12 +34,12 @@ url = https://www.diepxuan.com/everon/nem-everon.html
 [www.amazon.com]
 match = 2.5%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/Tx16RF6LC863W2F/?source=allQuestionsPage
+url = https://www.amazon.com/ask/questions/asin/B07D7WGGW6
 
 [forum.mattressunderground.com]
-match = 14.6%%
-title = Differentiating between King Koil mattresses
-url = https://forum.mattressunderground.com/t/mattress-search-differentiating-between-king-koil-mattresses/12812
+match = -31.7%%
+title = Closest better alternative that compares to these big brand ...
+url = https://forum.mattressunderground.com/t/closest-better-alternative-that-compares-to-these-big-brand-specs/13794
 
 [www.lencoheaven.net]
 match = -4.9%%
