--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-17 18:10:57
+lastsearch = 2024-07-17 20:48:41
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -182,9 +182,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -16.7%%
-title = TUI AG
-url = https://www.reuters.com/company/tui-ag/
+match = -225.0%%
+title = TUI to quit London stock market amid travel boom
+url = https://www.reuters.com/markets/europe/tui-swings-surprise-first-quarter-profit-robust-travel-demand-2024-02-13/
 
 [www.ufc.com]
 match = -141.7%%
