--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-17 20:30:55
+lastsearch = 2024-07-17 20:51:18
 
 [demxanh.com]
-match = -21.7%%
-title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html
+match = -39.1%%
+title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [www.diepxuan.com]
 match = 21.7%%
-title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
+title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
 
 [uannga.vn]
 match = 56.5%%
@@ -52,9 +52,9 @@ title = Chiếu Trúc Cao Sơn – Cao Bằng Loại 1 - Hà Nội
 url = https://thegioidemviet.vn/chieu-truc-cao-bang-loai-1/
 
 [www.facebook.com]
-match = 13.0%%
-title = Chiếu trúc Bản Ngà - Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieucaobang/
+match = 21.7%%
+title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
+url = https://www.facebook.com/chieutruccaobangcbg/
 
 [entershopping.vn]
 match = -21.7%%
