--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-17 18:11:18
+lastsearch = 2024-07-17 20:52:52
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -202,9 +202,9 @@ title = Thực đơn ăn dặm nào phù hợp cho trẻ dị ứng đạm sữa
 url = https://hellobacsi.com/nuoi-day-con/be-0-1-tuoi/dinh-duong-cho-tre/thuc-don-an-dam-cho-tre-di-ung-dam-sua-bo/
 
 [www.scribd.com]
-match = 7.1%%
-title = Mòn Răng: Chủ Đề Nghiên Cứu | PDF
-url = https://www.scribd.com/document/638066983/Untitled
+match = -53.6%%
+title = 380 Bai Luan Mau Tieng Anh P2 | PDF | Pupa | Butterfly
+url = https://www.scribd.com/document/157202556/380-Bai-Luan-Mau-Tieng-Anh-P2
 
 [khanhbinh.tanuyen.binhduong.gov.vn]
 match = 7.1%%
