--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-17 17:53:02
+lastsearch = 2024-07-17 20:52:41
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -102,9 +102,9 @@ title = Secured Home of congnghiepthanglong.com
 url = https://congnghiepthanglong.com/
 
 [sv.ut.edu.vn]
-match = -75.0%%
-title = luật poker omaha-App Store5.93.517
-url = https://sv.ut.edu.vn/newsr4ru7ie5.html
+match = -125.0%%
+title = mega88 slot game–Apps on Google Play964.91.4
+url = https://sv.ut.edu.vn/newscowtl1.html
 
 [en.wikipedia.org]
 match = 6.2%%
@@ -500,4 +500,9 @@ url = https://www.bbc.com/vietnamese/articles/czrjv2xvnr4o
 match = -193.8%%
 title = Phan Thanh Nhàn (@ptn.18) • Instagram photos and videos
 url = https://www.instagram.com/ptn.18/
+
+[congan.com.vn]
+match = -200.0%%
+title = Trên đường đi học về, nam sinh ngã vào gầm xe đầu kéo ...
+url = https://congan.com.vn/giao-thong-24h/tren-duong-di-hoc-ve-nam-sinh-nga-vao-gam-xe-dau-keo-bi-can-tu-vong_164835.html
 
