--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-07-17 18:30:58
+lastsearch = 2024-07-17 20:46:52
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
-match = -100.0%%
-title = (Giá sỉ) chiếu nhựa gập đôi tiện dụng (đủ mọi kích thước)
-url = https://shopee.vn/(Giá-sỉ)-chiếu-nhựa-gập-đôi-tiện-dụng-(đủ-mọi-kích-thước)-i.143185988.8645235023
+match = 70.0%%
+title = Chiếu nhựa Hà Nội các cỡ
+url = https://shopee.vn/Chiếu-nhựa-Hà-Nội-các-cỡ-i.236527859.6960486970
 
 [tchome.vn]
 match = 20.0%%
@@ -28,8 +28,8 @@ url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
 match = 10.0%%
-title = danh sách Chiếu Nhựa
-url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
+title = chiếu nhựa, chiếu cói ở tại hà nội
+url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói-ở_hà-nội.html
 
 [trangvangvietnam.com]
 match = -90.0%%
@@ -37,9 +37,9 @@ title = chiếu nhựa chiếu cói chiếu tre chiếu trúc ở tại hà nộ
 url = https://trangvangvietnam.com/cateprovinces/490435/chiếu-nhựa-chiếu-cói-chiếu-tre-chiếu-trúc-ở-tại-hà-nội.html
 
 [www.sendo.vn]
-match = -75.0%%
-title = Chiếu Nhựa 1M2 Hàng Xịn, Rẻ Nhất, Thanh Toán Khi Nhận
-url = https://www.sendo.vn/chieu-nhua-1m2.htm
+match = -35.0%%
+title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
+url = https://www.sendo.vn/chieu-nhua.htm
 
 [www.facebook.com]
 match = -5.0%%
