--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-17 13:43:24
+lastsearch = 2024-07-17 20:50:05
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -32,9 +32,9 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -64.0%%
-title = Bộ chăn ra gối nệm thắng lợi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=bộ chăn ra gối nệm thắng lợi
+match = -36.0%%
+title = Ga giường thăng lợi 160*200 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=ga giường thăng lợi 160*200
 
 [nemhana.com]
 match = -40.0%%
@@ -42,9 +42,9 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = -16.0%%
-title = Bộ ga chun Cotton chống thấm màu xanh bộ đội
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-bo-doi.html
+match = -8.0%%
+title = Bộ ga chun Cotton chống thấm màu ghi nhạt
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [www.lazada.vn]
 match = 0.0%%
@@ -85,4 +85,9 @@ url = https://demgiare.vn/ga-goi-thang-loi-1m8x2m-ms12.html
 match = 0.0%%
 title = Chăn ga gối nệm chính hãng giá tốt
 url = https://www.nemthangloionline.com/
+
+[nemthangloi.org]
+match = -48.0%%
+title = Ga chun trải giường thắng lợi Silk & Cotton Tl56 giá rẻ
+url = https://nemthangloi.org/san-pham/ga-chun-trai-giuong-thang-loi-silk-cotton-tl56/
 
