--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-17 19:23:17
+lastsearch = 2024-07-17 20:45:11
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/MC_Ren
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfkILurd&sig=ACfU3U01RVNibY6YHTgTSxDa6DVaLZ8mEg&hl=en&sa=X&ved=2ahUKEwj4lsa3iK6HAxXDFlkFHW7qDywQ6AF6BAgXEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfkJGuj6&sig=ACfU3U2-wbsRhJeI8A7ADGouWYjURQrtTQ&hl=en&sa=X&ved=2ahUKEwjE_7nemq6HAxWGGjQIHVMMA9wQ6AF6BAgfEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
