--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-17 17:47:59
+lastsearch = 2024-07-17 20:51:06
 
 [munghoangphat.com]
 match = -24.0%%
@@ -12,9 +12,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [tiki.vn]
-match = -28.0%%
-title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=màn bung 16m có đáy
+match = -36.0%%
+title = Màn chụp tự bung đỉnh vuông tiến đạt hàng chính hãng, ...
+url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông tiến đạt
 
 [shopee.vn]
 match = -48.0%%
@@ -22,9 +22,9 @@ title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
 url = https://shopee.vn/list/màn chụp/vuông
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-vuong-1m6-x-2m.html
+match = -32.0%%
+title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
+url = https://www.mungbaobao.com/
 
 [www.diepxuan.com]
 match = 100.0%%
