--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-17 20:26:14
+lastsearch = 2024-07-17 20:47:48
 
 [www.instagram.com]
 match = -105.6%%
@@ -22,9 +22,9 @@ title = Nệm Giá Kho Hồng Ngự - 16 Nguyễn Huệ
 url = https://www.facebook.com/nemgiakhohongngu/
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [www.youtube.com]
 match = -144.4%%
@@ -42,14 +42,14 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -200.0%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [lanchi.vn]
-match = 16.7%%
-title = NEM CHUA HÀ THÀNH 200G
-url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
+match = -44.4%%
+title = NƯỚC MẮM NAM NGƯ SIÊU TIẾT KIỆM 800ML
+url = https://lanchi.vn/san-pham/nuoc-mam-nam-ngu-sieu-tiet-kiem-800ml/
 
 [www.tiktok.com]
 match = -166.7%%
