CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-17 20:24:31
+lastsearch = 2024-07-17 21:36:23
 
 [hoa18.com]
 match = -84.2%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -168.4%%
-title = Cảnh sát nổ súng, một người chết gần địa điểm diễn ra đại ...
-url = https://trithucvn.co/the-gioi/canh-sat-no-sung-mot-nguoi-chet-gan-dia-diem-dien-ra-dai-hoi-dch-tai-milwaukee.html
+match = -152.6%%
+title = Ông Trump nói Đài Loan phải trả tiền cho Mỹ để được bảo ...
+url = https://trithucvn.co/the-gioi/ong-trump-noi-dai-loan-phai-tra-tien-cho-my-de-duoc-bao-ve-khoi-trung-quoc.html
 
 [bptv.vn]
 match = -57.9%%
