--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-17 21:12:40
+lastsearch = 2024-07-17 21:38:44
 
 [helloviettravel.com]
 match = -50.0%%
@@ -27,9 +27,9 @@ title = Du lịch Việt Nam - 18/5/2024 - Video đã phát trên VTV1
 url = https://vtv.vn/video/du-lich-viet-nam-18-5-2024-676711.htm
 
 [www.facebook.com]
-match = -12.5%%
-title = Du Lịch USA và Thế Giới
-url = https://www.facebook.com/groups/dulichusavathegioi/
+match = -181.2%%
+title = ‍♂️‍♀️Khám phá Khu trải nghiệm 18 tầng địa ngục tại Điểm ...
+url = https://www.facebook.com/quangninhgate/videos/️️khám-phá-khu-trải-nghiệm-18-tầng-địa-ngục-tại-điểm-du-lịch-quảng-ninh-gatekhu-/440182313402897/
 
 [vinpearl.com]
 match = -156.2%%
@@ -255,4 +255,9 @@ url = https://thuvienphapluat.vn/hoi-dap-phap-luat/839F801-hd-lam-ho-chieu-di-nu
 match = -131.2%%
 title = CÔNG TY DU LỊCH CHIÊU TOUR HÀNG ĐẦU VIỆT NAM ...
 url = https://chieutour.com/tour-du-lich-trong-nuoc-trang-20/
+
+[viettourist.com]
+match = -137.5%%
+title = Du lịch NHẬT BẢN Hè 4N3Đ Osaka - Viettourist
+url = https://viettourist.com/tours/du-lich-nhat-ban-he-danh-cho-gia-dinh-4n3d-pid-1891.html
 
