--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-17 19:58:37
+lastsearch = 2024-07-17 21:39:11
 
 [www.walmart.com]
 match = -162.5%%
@@ -160,4 +160,14 @@ url = https://globalmaxhosting.com/blogs/tyonogkq-277//
 match = -125.0%%
 title = armani ar5905 - More - aquaserviecuador.com
 url = https://m.aquaserviecuador.com/blogs/prwdicng-264/
+
+[mastersender.ru]
+match = -193.8%%
+title = beauty school的用法讲解News educations days
+url = http://mastersender.ru/index3.php?name=https://xn--b1aecnalzhcpg.xn--p1ai/tc7oCgKm53afe
+
+[www.lebguide.com]
+match = -106.2%%
+title = Thai massage berlin tegel - Lebanon Guide
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn----7sbaablb9b6aqlbpc3aq.xn--p1ai/3415892rbxhcomafe88y
 
