--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-17 17:13:46
+lastsearch = 2024-07-17 21:38:21
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -22,9 +22,9 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -85.7%%
-title = Miền Bắc chiều và đêm nay còn mưa lớn cục bộ | VTVWDB
-url = https://www.youtube.com/watch?v=9CsOVMaSlyo
+match = -57.1%%
+title = 60 Giây Chiều - Ngày 16/07/2024 | HTV Tin tức
+url = https://www.youtube.com/watch?v=7IhwSRy3_gQ
 
 [m.facebook.com]
 match = -95.2%%
@@ -53,8 +53,8 @@ url = https://vtcnews.vn/8-tiem-kich-f-16-cua-dai-loan-bi-hong-do-dong-dat-ar862
 
 [trithucvn.co]
 match = -123.8%%
-title = Lo án tử hình, công ty nước ngoài cân nhắc 'di tản' nhân ...
-url = https://trithucvn.co/the-gioi/lo-an-tu-hinh-cong-ty-nuoc-ngoai-can-nhac-di-tan-nhan-vien-dai-loan-khoi-tq.html
+title = Ông Trump nói Đài Loan phải trả tiền cho Mỹ để được bảo ...
+url = https://trithucvn.co/the-gioi/ong-trump-noi-dai-loan-phai-tra-tien-cho-my-de-duoc-bao-ve-khoi-trung-quoc.html
 
 [antv.gov.vn]
 match = -123.8%%
