--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-17 18:12:39
+lastsearch = 2024-07-17 21:34:42
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -222,9 +222,9 @@ title = xôi lạc 31 - luật bóng ném - V2.5.2
 url = https://delhidentalcouncil.in/iosyospqc/28617987/
 
 [stockbiz.vn]
-match = -243.8%%
-title = Nhiều 'đại gia' tại Hà Nội bị lừa 140 tỷ đồng vì chiêu trò góp ...
-url = https://stockbiz.vn/tin-tuc/nhieu-dai-gia-tai-ha-noi-bi-lua-140-ty-dong-vi-chieu-tro-gop-von-mua-usd-gia-re/26685820
+match = -87.5%%
+title = Blog chứng khoán: Cú rung lắc “để đời”!
+url = https://stockbiz.vn/tin-tuc/blog-chung-khoan-cu-rung-lac-de-doi/26938417
 
 [cafebiz.vn]
 match = -212.5%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -218.8%%
-title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
+match = -212.5%%
+title = Phân tích kỹ thuật phiên chiều 09/07: Tâm lý lạc quan dần ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0907-tam-ly-lac-quan-dan-quay-lai-585-1205716.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -660,4 +660,9 @@ url = https://drt.vn/
 match = -187.5%%
 title = Công ty nước sạch Hà Nội | Hanoi Water Limited Company
 url = http://hawacom.vn/
+
+[m.nhipcaudautu.vn]
+match = -118.8%%
+title = Thị trường rung lắc, đảo chiều phút cuối phiên
+url = https://m.nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
 
