--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-17 05:45:14
+lastsearch = 2024-07-17 21:34:31
 
 [erado.vn]
-match = 0.0%%
-title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
+match = -5.0%%
+title = Giường ngủ da hạng sang mã 19
+url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-19.html
 
 [shopee.vn]
 match = -90.0%%
@@ -132,9 +132,9 @@ title = Tổng Hợp Các Mẫu Giường Quân Đội Bền Đẹp Nhất Hiệ
 url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-dep-nhat-hien-nay
 
 [noithatcaco.vn]
-match = -115.0%%
-title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+match = -135.0%%
+title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
+url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
 
 [sofahome.vn]
 match = 25.0%%
