--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-17 20:26:25
+lastsearch = 2024-07-17 22:41:07
 
 [hanvico.com.vn]
-match = 38.1%%
-title = Bộ ga chun LIVING - LV18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
+match = 28.6%%
+title = Bộ ga chun My Youth - MY18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18
+match = -66.7%%
+title = Bộ ga chun chần mặt Velina V20 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v20
 
 [shopee.vn]
 match = -114.3%%
@@ -22,9 +22,9 @@ title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
 url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
-match = -9.5%%
-title = Bộ chăn ga gối WaltDisney mã BY20002
-url = https://changagoidemsonghong.com/chan-ga-goi-by20002
+match = -71.4%%
+title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
+url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [demsonghonghanoi.com]
 match = -14.3%%
@@ -105,4 +105,9 @@ url = https://www.lamchame.com/forum/threads/bo-ga-goi-gia-110k-vai-nhung-xoa-kh
 match = 40.0%%
 title = Bộ Ga Chun Chần
 url = https://ngungon.com/danh-muc-san-pham/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan/
+
+[quoccuongmattress.vn]
+match = -100.0%%
+title = Bộ Chăn Ga Gối Gấm 4 món nhập khẩu cao cấp hoạ tiết in ...
+url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-gam-4-mon-nhap-khau-cao-cap-hoa-tiet-in-hoa-ma-02/
 
