--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-17 16:17:57
+lastsearch = 2024-07-17 22:37:07
 
 [chieutruc.info]
 match = -73.9%%
@@ -97,9 +97,9 @@ title = Chiếu Trúc Cao Bằng Hàng Xịn, Giá Deal Sốc, Ship Cod ...
 url = https://www.sendo.vn/chieu-truc-cao-bang.htm
 
 [www.lazada.vn]
-match = -60.9%%
-title = Chiếu trúc tre Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
-url = https://www.lazada.vn/products/chieu-truc-tre-tay-bac-cao-bang-loai-dep-mat-lanh-mua-he-i1552981866.html
+match = -69.6%%
+title = Chiếu trúc Cao Bằng chiếu trúc tăm Tây Bắc chất lượng ...
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-chieu-truc-tam-tay-bac-chat-luong-cao-1m5-1m6-1m8-i656876366.html
 
 [chieutruccaobang.com]
 match = -69.6%%
