--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-17 18:18:37
+lastsearch = 2024-07-17 22:36:34
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
 url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 
 [books.google.com]
-match = -150.0%%
-title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Eeyauu6&sig=ACfU3U3-2N5RomETSNpYjE8vYrMzIQ6kHA&hl=en&sa=X&ved=2ahUKEwijjcr9-a2HAxWmD1kFHcm4CywQ6AF6BAgcEAM
+match = -218.8%%
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHabAP2kBc&sig=ACfU3U3UzymYR0VNxOViZjZncMwMAT81GQ&hl=en&sa=X&ved=2ahUKEwi33cHRs66HAxXcFFkFHbHwDyoQ6AF6BAgcEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -485,4 +485,9 @@ url = https://cafebiz.vn/khoi-to-16-bi-can-trong-duong-day-mua-ban-hoa-don-tron-
 match = -43.8%%
 title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
+
+[nhipcaudautu.vn]
+match = -118.8%%
+title = Thị trường rung lắc, đảo chiều phút cuối phiên
+url = https://nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
 
