--- a/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-150x200x10-felix.html
 lastopen = 2024-06-07 00:14:57
 
 [search]
-lastsearch = 2024-07-17 21:46:19
+lastsearch = 2024-07-17 22:33:30
 
 [thefelix.vn]
-match = -50.0%%
-title = Nệm Cao Su Felix
-url = https://thefelix.vn/collections/nem-cao-su-felix
+match = -2.6%%
+title = Nệm cao su Felix Comfort - Độ cứng tiêu chuẩn (Cấp độ 1)
+url = https://thefelix.vn/products/nem-cao-su-felix-premium-comfort-10cm
 
 [nemkhanganh.com]
 match = 47.4%%
