--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-17 17:15:27
+lastsearch = 2024-07-17 22:35:28
 
 [www.thanhthuyhanh.com]
-match = 78.6%%
-title = Ruột Gối Giá rẻ
+match = -50.0%%
+title = Ruột Gối Giá rẻ - Thanh Thúy Hạnh
 url = https://www.thanhthuyhanh.com/products/ruot-goi-nam-dream-zone
 
 [ninhouse.vn]
