CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-17 20:32:08
+lastsearch = 2024-07-17 22:50:45
 
 [www.youtube.com]
 match = -48.0%%
@@ -400,4 +400,9 @@ url = https://kevevn.vn/20240218/vu-292-du-khach-bi-bo-roi-o-phu-quoc-cong-ty-da
 match = -66.7%%
 title = Taiwan Today
 url = https://vn.taiwantoday.tw/
+
+[vietsuntravel.com]
+match = -4.0%%
+title = Tour Đài Loan 5N4Đ (KH: 16/08/2024)
+url = https://vietsuntravel.com/products/tour-dai-loan-5n4d-kh-16-08-2024
 
