--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-17 21:12:28
+lastsearch = 2024-07-17 22:48:39
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -170.6%%
-title = Original Video of Hoa Guy Fines Neighbor for to Many ...
-url = https://www.tiktok.com/discover/Original-video-of-hoa-guy-fines-neighbor-for-to-many-packages-on-porch?lang=en
+match = -41.2%%
+title = HOA fined me for this #hoa | hoa
+url = https://www.tiktok.com/@koltindarley/video/7317753084510342443?lang=en
 
 [www.steadily.com]
 match = 0.0%%
@@ -400,4 +400,9 @@ url = https://mgaleg.maryland.gov/2024RS/fnotes/bil_0009/hb1039.pdf
 match = -70.6%%
 title = Metropolitan Police Department - DC.gov
 url = https://mpdc.dc.gov/
+
+[consumer.sc.gov]
+match = 0.0%%
+title = 
+url = https://consumer.sc.gov/HOA-Ed
 
