--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-17 10:17:09
+lastsearch = 2024-07-17 22:50:09
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2412015064.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -83.3%%
-title = Chợ Đông Ba - Nam Cali | Westminster CA
-url = https://www.facebook.com/quanohon/
+match = -33.3%%
+title = Nem Nướng
+url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
 
 [thegioinem.com]
 match = 23.5%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -105.6%%
-title = Dolce Gabbana Light Blue Intense Bargello Kodu
-url = https://www.tiktok.com/discover/dolce-gabbana-light-blue-intense-bargello-kodu
+match = -27.8%%
+title = Que Huong Nem Nuong Air Fryer
+url = https://www.tiktok.com/discover/que-huong-nem-nuong-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
