--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-17 14:26:45
+lastsearch = 2024-07-17 22:44:31
 
 [m.youtube.com]
 match = -144.4%%
@@ -12,14 +12,14 @@ title = Quán bún nem nướng bán 18 năm với cây nem khổng lồ ...
 url = https://m.youtube.com/watch?v=EXN2H5TJ7Ko
 
 [thegioinem.com]
-match = 17.6%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -111.1%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -66.7%%
-title = 𝐍𝐞𝐦 𝐜𝐡𝐚̉ 𝐜𝐚́𝐜 𝐥𝐨𝐚̣𝐢 đ𝐚𝐧𝐠 𝐜𝐨́ 𝐫𝐚̂́𝐭 𝐧𝐡𝐢𝐞̂̀𝐮 𝐨̛̉ ...
-url = https://www.instagram.com/p/C8pRwdDgBbw/
+match = -16.7%%
+title = 𝗡𝗘𝗠 𝗖𝗛𝗨𝗔 𝗥𝗔́𝗡 siêu ngon pà con ...
+url = https://www.instagram.com/p/CxVEuLEv0dk/
 
 [www.facebook.com]
 match = -105.6%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -105.6%%
-title = Ăn vặt ngon Cali | NEM CHUA HỦ $65 ( 50 cái )
-url = https://m.facebook.com/groups/anvatngoncali/posts/8357068874306053/
+match = -138.9%%
+title = Nguoi Viet Colorado | 💥 NEM CUA BỂ VUÔNG SIÊU CHẤT ...
+url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
 
 [www.proz.com]
 match = -183.3%%
