--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-17 22:41:29
+lastsearch = 2024-07-17 22:52:41
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,9 +17,9 @@ title = Fabiana Justus (@fabianajustus)
 url = https://www.instagram.com/fabianajustus/?hl=en
 
 [www.reddit.com]
-match = -115.0%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+match = -50.0%%
+title = Riot is cutting back budget on esports?
+url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
 match = -33.3%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -110.0%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.vlr.gg]
 match = 5.6%%
