--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-17 21:34:22
+lastsearch = 2024-07-17 22:53:13
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -33.3%%
-title = ANNUAL REPORT 2015 / 16
-url = https://www.tuigroup.com/damfiles/default/tuigroup-15/en/investors/6_Reports-and-presentations/Reports/2016/TUI_AR_2015-16_withMagazine.pdf-4572fe3dec10f0196450291182933f8c.pdf
+match = -300.0%%
+title = TUI Group – The one of the world's leading tourism groups
+url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
 match = -316.7%%
