--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-17 13:53:20
+lastsearch = 2024-07-17 22:47:20
 
 [www.lazada.vn]
 match = -55.6%%
@@ -124,7 +124,7 @@ url = https://www.initse.com/ende/investors/investor-relations/
 [docs.elsegundo.org]
 match = 5.6%%
 title = Laserfiche WebLink
-url = https://docs.elsegundo.org/WebLink/doc/375082/Page2.aspx?repo=COES&dbid=0
+url = https://docs.elsegundo.org/WebLink8/0/doc/375082/Page3.aspx
 
 [www.medicare.gov]
 match = 5.6%%
