--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-17 22:33:41
+lastsearch = 2024-07-17 23:17:39
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -22,9 +22,9 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -57.1%%
-title = 60 Giây Chiều - Ngày 16/07/2024 | HTV Tin tức
-url = https://www.youtube.com/watch?v=7IhwSRy3_gQ
+match = -161.9%%
+title = 20231116 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
+url = https://www.youtube.com/watch?v=ltAacMEstjU
 
 [m.facebook.com]
 match = -95.2%%
