--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-17 15:38:50
+lastsearch = 2024-07-17 23:24:14
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 [books.google.com]
 match = -87.5%%
 title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
-url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENPUX64Zw&sig=ACfU3U0y2pwYdsbXAU9U7687Av6RViC0rg&hl=en&sa=X&ved=2ahUKEwjChPyr0KyHAxVjhIkEHeKODXwQ6AF6BAgjEAM
+url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENPVU03Wz&sig=ACfU3U0nxYHrxhphTx6ak2c-3OKhg6trfw&hl=en&sa=X&ved=2ahUKEwia0Imlvq6HAxUsETQIHc8pABAQ6AF6BAghEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -475,4 +475,9 @@ url = https://www.baosoctrang.org.vn/cong-nghiep/bi-thu-tinh-uy-lam-van-man-khao
 match = -175.0%%
 title = Kỷ niệm 50 năm chiến thắng Nông Sơn - Trung Phước (18 ...
 url = https://baoquangnam.vn/ky-niem-50-nam-chien-thang-nong-son-trung-phuoc-18-7-1974-18-7-2024-dung-xay-que-huong-tu-dau-an-vung-dat-3138037.html
+
+[m.nhipcaudautu.vn]
+match = -118.8%%
+title = Thị trường rung lắc, đảo chiều phút cuối phiên
+url = https://m.nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
 
