--- a/images/tui-warmdream-140x190x09/config.ini
+++ b/images/tui-warmdream-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 lastopen = 2024-06-17 10:43:14
 
 [search]
-lastsearch = 2024-07-17 22:15:36
+lastsearch = 2024-07-17 23:16:29
 
 [www.diepxuan.com]
 match = -16.7%%
@@ -19,12 +19,12 @@ url = https://www.youtube.com/live/vE0wkadkViE?t=311s
 [www.amazon.com]
 match = -50.0%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B06WWGYF5P/1/ref=ask_ql_psf_ql_hza
+url = https://www.amazon.com/ask/questions/asin/B077S3WNR3
 
 [www.talkbass.com]
-match = -70.8%%
-title = Accugroove Tri 112L v Epi NYC 410 v Epi UL310 ...
-url = https://www.talkbass.com/threads/accugroove-tri-112l-v-epi-nyc-410-v-epi-ul310-v-sadowsky-sa410.302104/
+match = -95.8%%
+title = Best 2x15 setup you've found...preferably pair of 1x15's
+url = https://www.talkbass.com/threads/best-2x15-setup-youve-found-preferably-pair-of-1x15s.1183155/page-3
 
 [www.theflyfishingforum.com]
 match = -4.2%%
@@ -37,9 +37,9 @@ title = Stampendous/Dreamweaver Thursday - Build-A-Snowman
 url = http://www.lynspaperpetunia.com/home/stampendousdreamweaver-thursday-build-a-snowman
 
 [www.audioasylum.com]
-match = -95.8%%
-title = MSB Link Dac3 - Comparable to BelCanto, Perpetual, AN??
-url = https://www.audioasylum.com/cgi/t.mpl?f=digital&m=12393
+match = -50.0%%
+title = Speaker Asylum
+url = https://www.audioasylum.com/cgi/t.mpl?f=speakers&m=300550
 
 [www.facebook.com]
 match = -25.0%%
