--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-17 22:37:59
+lastsearch = 2024-07-17 23:20:18
 
 [shopee.vn]
-match = -44.0%%
-title = màn chụp đỉnh vuông giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp đỉnh vuông
+match = -24.0%%
+title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [munghoangphat.com]
 match = 48.0%%
@@ -47,9 +47,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.lazada.vn]
-match = 32.0%%
-title = Mùng Tự Bung đỉnh Vuông Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
+match = -28.0%%
+title = Màn khung tự bung đỉnh vuông cao cấp hàng nhập khẩu ...
+url = https://www.lazada.vn/products/man-khung-tu-bung-dinh-vuong-cao-cap-hang-nhap-khau-18m-x-2m-i714064008.html
 
 [demxanh.com]
 match = 12.0%%
