--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-17 22:38:55
+lastsearch = 2024-07-17 23:21:03
 
 [shopee.vn]
 match = -216.7%%
@@ -42,14 +42,14 @@ title = GHẾ NỆM DỰA CAO CẤP 4000-913
 url = https://thinhgo.com/products/ghe-nem-dua-cao-cap-4000-913
 
 [tiki.vn]
-match = -200.0%%
-title = Nệm ghế,Thảm ghế gỗ loại 1m7x 55cm mẫu màu nâu
-url = https://tiki.vn/nem-ghe-tham-ghe-go-loai-1m7x-55cm-mau-mau-nau-p89638643.html?spid=141114686
+match = -241.7%%
+title = Thảm ghế, nệm ghế gỗ kích thước 2m x 60cm các màu nâu
+url = https://tiki.vn/tham-ghe-nem-ghe-go-kich-thuoc-2m-x-60cm-cac-mau-nau-p89638136.html
 
 [suongtuyet.com]
-match = -133.3%%
-title = Nên Mua Thảm Lót Ghế Gỗ Hay Đệm Ghế Gỗ?
-url = https://suongtuyet.com/nen-mua-tham-lot-ghe-go-hay-dem-ghe-go.html
+match = -125.0%%
+title = Bộ Sưu Tập Đệm Ghế Gỗ Đẹp Nhất 2024
+url = https://suongtuyet.com/bo-suu-tap-nem-ghe-go-dep-gia-re-cho-gia-dinh.html
 
 [nemkimcuong.vn]
 match = -16.7%%
