--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-17 21:36:43
+lastsearch = 2024-07-17 23:38:33
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -445,4 +445,9 @@ url = https://www.fsresidential.com/florida/news-events/articles/florida-board-m
 match = -170.6%%
 title = Condo Wars: After HOA corruption arrests, Florida's ...
 url = https://www.sun-sentinel.com/2023/10/18/condo-wars-after-hoa-corruption-arrests-floridas-community-management-industry-works-to-weaken-reform-bills/
+
+[condomanagement.com]
+match = 0.0%%
+title = 
+url = https://condomanagement.com/can-you-enact-limits-on-renting-in-an-illinois-condo-association/
 
