--- a/images/ruot-nem-warmdream-180x200x09/config.ini
+++ b/images/ruot-nem-warmdream-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x09.html
 lastopen = 2024-06-08 11:30:15
 
 [search]
-lastsearch = 2024-07-17 23:20:31
+lastsearch = 2024-07-18 00:30:04
 
 [www.diepxuan.com]
 match = 3.4%%
@@ -50,4 +50,9 @@ url = https://m.youtube.com/watch?v=dBfZl-fVl74
 match = -17.2%%
 title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/asin/B003Y55V3O/ref=ask_mdp_dpmw_ql_hza?isAnswered=true
+
+[transcripts.foreverdreaming.org]
+match = -8.0%%
+title = 00x09 - Behind the screen
+url = https://transcripts.foreverdreaming.org/viewtopic.php?t=65051
 
