--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-17 23:24:14
+lastsearch = 2024-07-18 00:30:48
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -87.5%%
-title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
-url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENPVU03Wz&sig=ACfU3U0nxYHrxhphTx6ak2c-3OKhg6trfw&hl=en&sa=X&ved=2ahUKEwia0Imlvq6HAxUsETQIHc8pABAQ6AF6BAghEAM
+match = -218.8%%
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabAP9jwf&sig=ACfU3U1a0SaqG4Dow17B_gKDqt9h-2vmEg&hl=en&sa=X&ved=2ahUKEwjvrreVza6HAxWLLkQIHdKpAj4Q6AF6BAgjEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
