--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-17 15:51:41
+lastsearch = 2024-07-18 00:31:45
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -10.0%%
-title = sylviagani
-url = https://www.instagram.com/sylviagani/?hl=en
+match = -15.4%%
+title = Ayu Gani 🐘 (@ganegani)
+url = https://www.instagram.com/ganegani/?hl=en
 
 [www.nebf.com]
 match = -46.2%%
@@ -277,8 +277,8 @@ title = Ginny & Georgia (TV Series 2021
 url = https://www.imdb.com/title/tt10813940/
 
 [ottawabraves.com]
-match = -284.6%%
-title = Women's Flag Football vs Thomas University (Ga.) on 3/16 ...
+match = -292.3%%
+title = Women's Flag Football vs Thomas University (Ga.) on 3/16/2024
 url = https://ottawabraves.com/sports/womens-flag-football/stats/2024/thomas-university-ga-/boxscore/9867
 
 [www.soccerwire.com]
