--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-17 22:44:31
+lastsearch = 2024-07-18 00:37:34
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -16.7%%
-title = 𝗡𝗘𝗠 𝗖𝗛𝗨𝗔 𝗥𝗔́𝗡 siêu ngon pà con ...
-url = https://www.instagram.com/p/CxVEuLEv0dk/
+match = -66.7%%
+title = 𝐍𝐞𝐦 𝐜𝐡𝐚̉ 𝐜𝐚́𝐜 𝐥𝐨𝐚̣𝐢 đ𝐚𝐧𝐠 𝐜𝐨́ 𝐫𝐚̂́𝐭 𝐧𝐡𝐢𝐞̂̀𝐮 𝐨̛̉ ...
+url = https://www.instagram.com/p/C8pRwdDgBbw/
 
 [www.facebook.com]
 match = -105.6%%
@@ -27,9 +27,9 @@ title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
 url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
-match = -155.6%%
-title = team cầu giấy thử quán bf nem nướng 39ka này chưa nhỉ ...
-url = https://www.tiktok.com/@bachuareview/video/7246044125747825928
+match = -127.8%%
+title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
+url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
 
 [www.youtube.com]
 match = -138.9%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -138.9%%
-title = Nguoi Viet Colorado | 💥 NEM CUA BỂ VUÔNG SIÊU CHẤT ...
-url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
+match = -105.6%%
+title = Ăn vặt ngon Cali | NEM CHUA HỦ $65 ( 50 cái )
+url = https://m.facebook.com/groups/anvatngoncali/posts/8357068874306053/
 
 [www.proz.com]
 match = -183.3%%
