--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-07-17 20:49:12
+lastsearch = 2024-07-18 00:34:54
 
 [www.everonqb.com]
-match = -8.7%%
-title = Everon Quảng Bình Vỏ gối ôm EPCOCEAN 80x100
-url = https://www.everonqb.com/vo-goi-om-epcocean-80x100.html
+match = -47.8%%
+title = Vỏ gối ôm EP1735 80x100 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-om-ep1735-80x100.html
 
 [www.reddit.com]
 match = -91.3%%
