--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-17 22:45:40
+lastsearch = 2024-07-18 00:45:49
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -57,9 +57,9 @@ title = Bộ Chăn Ga Gối Đệm Mùa Hè Chất Vải Lụa Siêu Mát Mềm 
 url = https://manbinhminh.com/2415/bo-chan-ga-goi-dem-mua-he-chat-vai-lua-sieu-mat-mem-min-an-toan-khong-tam-mau.aspx
 
 [suongtuyet.com]
-match = -54.2%%
-title = Bộ Chăn Ga Màu Xanh Lá Cây Đẹp, Giá Rẻ, Mẫu Mới Năm ...
-url = https://suongtuyet.com/bo-chan-ga-mau-xanh-la-cay-dep.html
+match = 41.7%%
+title = Bộ Chăn Ga Gối Lụa Silk Thêu LSP-16
+url = https://suongtuyet.com/bo-chan-ga-goi-lua-silk-theu-lsp-16
 
 [juliabedding.com]
 match = -58.3%%
