--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-17 23:16:41
+lastsearch = 2024-07-18 00:49:00
 
 [www.gov.uk]
 match = -200.0%%
@@ -49,7 +49,7 @@ url = https://www.otosaigon.com/threads/khoe-cong-trinh-e-dang-thi-cong-cap-nhat
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/FIFA_Men's_World_Ranking
+url = https://en.wikipedia.org/wiki/Ukraine_national_football_team
 
 [www.regmovies.com]
 match = -113.3%%
@@ -182,9 +182,9 @@ title = Premier League Football News, Fixtures, Scores & Results
 url = https://www.premierleague.com/
 
 [books.google.com]
-match = -260.0%%
-title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPlxQCRQe&sig=ACfU3U0D3KMr5lBwtqeq-EXfcW1oCQx8VA&hl=en&sa=X&ved=2ahUKEwiemqOu_Z2HAxVmM1kFHXSwCrAQ6AF6BAgmEAM
+match = -233.3%%
+title = Evangeli Basun [weekly]. - Volume 6 - Google Books Result
+url = https://books.google.com/books?id=X58zAQAAMAAJ&pg=RA7-PP1&lpg=RA7-PP1&dq=man+re+trang+16&source=bl&ots=s1SOay5HlD&sig=ACfU3U3oTtwF_NiDGIMQqF2skkA6gTjMrg&hl=en&sa=X&ved=2ahUKEwja05qe0a6HAxWFC3kGHdUtAYMQ6AF6BAhGEAM
 
 [www.nolo.com]
 match = 0.0%%
