--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-17 23:22:45
+lastsearch = 2024-07-18 00:50:05
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -640,4 +640,9 @@ url = https://www.portlandvancouverhomesearch.com/search/quick/PDQVLZZZVD480Q8BP
 match = -113.6%%
 title = Recent Alarms | Southern Marin Fire Protection District, CA
 url = https://www.smfd.org/our-district/district-outreach-and-communications/recent-alarms
+
+[appropriations.house.gov]
+match = -9.1%%
+title = asRequestedCPFs_FY25_6.20.24
+url = https://appropriations.house.gov/sites/evo-subsites/republicans-appropriations.house.gov/files/evo-media-document/fy25-house-cpfs-as-requested-06.28.2024.xlsx
 
