CI images update

--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-18 00:37:09
+lastsearch = 2024-07-18 01:20:36
 
 [www.youtube.com]
 match = -147.4%%
@@ -270,4 +270,9 @@ url = https://khodem.vn/chieu-tre-truc-tam-moc-huong-truc/
 match = -15.8%%
 title = Chiếu trúc thanh viền lụa loại cây
 url = https://thegioichieutruc.com/chieu-truc-thanh-vien-lua-loai-cay/
+
+[baobinhdinh.vn]
+match = -115.8%%
+title = Tuy Phước xóa bỏ các cơ sở giết mổ trong khu dân cư
+url = https://baobinhdinh.vn/viewer.aspx?macm=5&macmp=5&mabb=280331
 
