--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-18 00:19:28
+lastsearch = 2024-07-18 01:16:09
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -42,9 +42,9 @@ title = Ho Chi Minh ZIP code - The most updated ...
 url = https://phaata.com/en/zip-code/ho-chi-minh-zip-code-1309.html
 
 [www.youtube.com]
-match = -75.0%%
-title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
-url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
+match = -187.5%%
+title = ZEISS CP.3 Lenses - Hiro Matsuzaki on choosing your ...
+url = https://www.youtube.com/watch?v=q7DmMt9UmqQ
 
 [vietbis.vn]
 match = -193.8%%
