--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-17 21:36:00
+lastsearch = 2024-07-18 01:17:22
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -290.9%%
-title = Ghế da lãnh đạo SG936 | Ghế xoay văn phòng Hòa Phát
-url = https://noithathoaphat.com/ghe-da-lanh-dao-sg936
+match = -254.5%%
+title = Ghế da trưởng phòng SG350B - Nội thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg350b
 
 [dandoxe.com]
 match = -154.5%%
@@ -47,9 +47,9 @@ title = Bọc ghế da ô tô Xpander (da Thái) - RedCar.com
 url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-xpander-da-thai/
 
 [bocghedaoto.net]
-match = -45.5%%
-title = BỌC GHẾ DA Ô TÔ UY TÍN
-url = https://bocghedaoto.net/boc-ghe-da-o-to-uy-tin
+match = -109.1%%
+title = 50+ Mẫu Bọc Ghế Da Xe Camry Đẹp
+url = https://bocghedaoto.net/boc-ghe-da-xe-camry
 
 [ghedagiago.com]
 match = -290.9%%
