CI images update

--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-17 14:44:02
+lastsearch = 2024-07-18 01:43:22
 
 [en.wikipedia.org]
-match = 8.7%%
-title = Korea under Japanese rule
-url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
+match = 0.0%%
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Latest Videos
 url = https://www.cnn.com/videos
 
 [cryptoslate.com]
-match = -17.4%%
-title = Highest Volume Cryptocurrencies
-url = https://cryptoslate.com/highest-volume/
+match = 8.7%%
+title = Cryptocurrency Rankings
+url = https://cryptoslate.com/coins/
 
 [www.irs.gov]
 match = -78.3%%
@@ -360,4 +360,9 @@ url = https://files.eric.ed.gov/fulltext/EJ1288073.pdf
 match = 10.0%%
 title = Osan Air Base > Home
 url = https://www.osan.af.mil/
+
+[www.sec.gov.ph]
+match = -60.9%%
+title = Securities and Exchange Commission: Home - SEC
+url = https://www.sec.gov.ph/
 
