--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-18 00:37:23
+lastsearch = 2024-07-18 01:38:30
 
 [everon.online]
 match = -7.4%%
@@ -17,9 +17,9 @@ title = Bộ Everon Epm-21066 chất liệu Gỗ Sồi (Modal) mẫu mới năm 
 url = https://everonvn.com.vn/everon/2135/bo-everon-epm-21066
 
 [tongdailyeveron.com.vn]
-match = 29.6%%
-title = Bộ ga phủ 180*200 EPM 20069
-url = https://tongdailyeveron.com.vn/products/bo-ga-phu-180-200-epm20069
+match = -5.3%%
+title = Bộ Chăn Ga Giảm Giá
+url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 
 [demxanh.com]
 match = -7.4%%
@@ -74,7 +74,7 @@ url = https://www.tenkarabum.com/nissin-zerosum-tenkara-rods.html
 [www.amazon.com]
 match = -22.2%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/Tx3J2AV7F6IB10T/
+url = https://www.amazon.com/ask/questions/asin/B00CHWV2WO/ref=ask_mdp_dpmw_ql_hza?isAnswered=true
 
 [tetontenkara.blogspot.com]
 match = 3.7%%
