--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-18 00:50:52
+lastsearch = 2024-07-18 01:40:03
 
 [shopee.vn]
-match = -13.8%%
-title = Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ 2m ...
-url = https://shopee.vn/Chiếu-nhựa-thái-lan-ăn-cơm-điều-hoà-gấp-gọn-đủ-cỡ-2m-3m-4m-i.13406575.655918786
+match = -17.2%%
+title = Chiếu nhựa thái hàng loại1 1,6m×2m 1,8×2m 2m×3m 2m × ...
+url = https://shopee.vn/Chiếu-nhựa-thái-hàng-loại1-1-6m×2m-1-8×2m-2m×3m-2m-×4m-i.422461343.3989921731
 
 [www.maihuyencorp.com]
 match = 13.8%%
@@ -27,9 +27,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.facebook.com]
-match = 31.0%%
-title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
-url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
+match = 26.3%%
+title = Chiếu Nhựa Thái Lan
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [www.sendo.vn]
 match = 24.1%%
@@ -115,4 +115,9 @@ url = https://donganh.hanoi.gov.vn/documents/2385586/5437173/84347561918617142.p
 match = -55.2%%
 title = UBND TINH DONG NAI SO XAY DU NG S6:^^( ^ ^ /SXD-QLXD ...
 url = https://vatlieuxaydung.org.vn/Upload/48/Nam_2021/Gia VLXD/Gia VLXD dong nai thang 6 nam 2021.PDF
+
+[quaycuichobe.com]
+match = -44.8%%
+title = Quây cũi nhựa gập gọn Pakey Gấu cao cấp – Bộ 16+2 (2m x ...
+url = https://quaycuichobe.com/quay-cui-nhua-pakey-gau-cao-cap-bo-162-2m-x-2m
 
