--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-18 00:46:55
+lastsearch = 2024-07-18 01:37:32
 
 [www.lazada.vn]
 match = -94.4%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -150.0%%
-title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
-url = https://www.facebook.com/sieuthinem267/
+match = -83.3%%
+title = Chợ Đông Ba - Nam Cali | Westminster CA
+url = https://www.facebook.com/quanohon/
 
 [voz.vn]
 match = 11.1%%
@@ -82,9 +82,9 @@ title = NEM NƯỚNG | Fast Food
 url = https://www.ministop.vn/en/product/detail?id=934
 
 [www.youtube.com]
-match = -155.6%%
-title = Tipps and Tricks - How to make CHA GIO - Authentic ...
-url = https://www.youtube.com/watch?v=YdTLFfXiGMk
+match = -172.2%%
+title = Bí quyết BÁNH RÁN LÚC LẮC, BÁNH CAM Vỏ giòn lâu không ...
+url = https://www.youtube.com/watch?v=bH6ztxrMr3E
 
 [www.tiktok.com]
 match = -105.6%%
@@ -92,9 +92,9 @@ title = Dolce Gabbana Light Blue Intense Bargello Kodu
 url = https://www.tiktok.com/discover/dolce-gabbana-light-blue-intense-bargello-kodu
 
 [vi.wikipedia.org]
-match = -72.2%%
-title = Vũ khí hạt nhân – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Vũ_khí_hạt_nhân
+match = -27.8%%
+title = Consolidated B-24 Liberator
+url = https://vi.wikipedia.org/wiki/Consolidated_B-24_Liberator
 
 [mia.vn]
 match = -188.9%%
@@ -165,4 +165,9 @@ url = https://mmbonappetit.com/nem-ran/
 match = 0.0%%
 title = 
 url = https://en.wikipedia.org/wiki/Nem
+
+[sandbarsc.com]
+match = 0.0%%
+title = 
+url = https://sandbarsc.com/news/net-metering-3-0/
 
