CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-17 21:34:42
+lastsearch = 2024-07-18 01:53:59
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -48,8 +48,8 @@ url = https://thongtindoingoai.caobang.gov.vn/Default.aspx?sid=1346&pageid=33880
 
 [www.youtube.com]
 match = -206.2%%
-title = Thầy Minh Niệm | Đâu là ý nghĩa của cuộc sống? | Chùa Minh ...
-url = https://www.youtube.com/watch?v=JMRU5RLEjcM
+title = (Play Together) RICHKID Chơi Play Mê Decor Nhà, Lạc Vào ...
+url = https://www.youtube.com/watch?v=poM99iVQhQs
 
 [vi.wikipedia.org]
 match = -50.0%%
@@ -665,4 +665,9 @@ url = http://hawacom.vn/
 match = -118.8%%
 title = Thị trường rung lắc, đảo chiều phút cuối phiên
 url = https://m.nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
+
+[nhipcaudautu.vn]
+match = -118.8%%
+title = Thị trường rung lắc, đảo chiều phút cuối phiên
+url = https://nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
 
