--- a/images/tham-chui-chan-khachdada-45x80360g/config.ini
+++ b/images/tham-chui-chan-khachdada-45x80360g/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chui-chan-khachdada-45x80360g.html
 lastopen = 2024-06-07 00:35:49
 
 [search]
-lastsearch = 2024-07-17 22:44:54
+lastsearch = 2024-07-18 01:51:19
 
 [www.diepxuan.com]
 match = 97.1%%
@@ -22,7 +22,7 @@ title = Cheryl Chan 陈慧玲 - Sharing festive joy and care with our...
 url = https://www.facebook.com/story.php/?story_fbid=757542172849263&id=100057804619631
 
 [www.instagram.com]
-match = -23.5%%
-title = 𝑪𝒉𝒂𝒏 𝒄𝒉𝒖🦋 | #💜สินค้าปลอดภัย .... Like comment and shere
-url = https://www.instagram.com/ll.chanchu_mukhi.ll/p/C2ZRqyqpg6N/
+match = 11.8%%
+title = ตาม Tam Chudaree Debhakam (@tamchudaree)
+url = https://www.instagram.com/tamchudaree/channel/
 
