--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-18 01:42:08
+lastsearch = 2024-07-18 01:53:05
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/mưa-bụi-thuong-hai
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiURNmL0B&sig=ACfU3U2FDepZTo4zp2wyaF9CCCeapTvUbw&hl=en&sa=X&ved=2ahUKEwjA3bK3_qyHAxV7ElkFHWr_ACwQ6AF6BAgVEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUSJnF3D&sig=ACfU3U2IXBsdlL8RYfSpoB4BuVni8Q1Qzg&hl=en&sa=X&ved=2ahUKEwjAvsbH366HAxXdD1kFHTsjDwMQ6AF6BAgXEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
