--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-17 23:37:05
+lastsearch = 2024-07-18 01:51:53
 
 [www.tiktok.com]
 match = -41.2%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC68loIOKJ&sig=ACfU3U0P7oX6kuiQnUwgEDPy4-_L9xVJaQ&hl=en&sa=X&ved=2ahUKEwiSkZrFta6HAxVlCjQIHWpEBu0Q6AF6BAgxEAM
+match = -176.5%%
+title = Official Army Register - Page 356 - Google Books Result
+url = https://books.google.com/books?id=TOYsAAAAIAAJ&pg=RA1-PA356&lpg=RA1-PA356&dq=man+in+hoa+dep+16&source=bl&ots=m4CeLtGbGV&sig=ACfU3U2ElEuqJrhFUvut9EE50cDx_G5wbQ&hl=en&sa=X&ved=2ahUKEwiql8Cl366HAxXrMlkFHfU0AiwQ6AF6BAgaEAM
 
 [tax.vermont.gov]
 match = -29.4%%
