--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-18 01:20:12
+lastsearch = 2024-07-18 01:49:52
 
 [screenrant.com]
 match = 0.0%%
@@ -12,8 +12,8 @@ title =
 url = https://screenrant.com/use-green-screen-feature-youtube-shorts-how/
 
 [www.facebook.com]
-match = -178.6%%
-title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và
+match = -235.7%%
+title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ...
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
@@ -82,14 +82,14 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = -20.0%%
-title = Green card
-url = https://en.wikipedia.org/wiki/Green_card
+match = 7.1%%
+title = Little green men
+url = https://en.wikipedia.org/wiki/Little_green_men
 
 [www.imdb.com]
-match = -92.9%%
-title = Blue Eye Samurai (TV Series 2023)
-url = https://www.imdb.com/title/tt13309742/
+match = 0.0%%
+title = Green Book (2018)
+url = https://www.imdb.com/title/tt6966692/
 
 [www.boundless.com]
 match = -128.6%%
@@ -405,4 +405,9 @@ url = https://www.police1.com/chiefs-sheriffs/articles/incorporating-the-tenth-m
 match = -250.0%%
 title = Mua điện thoại iPhone giá rẻ, nhiều ưu đãi, giao hàng nhanh
 url = https://dienmaycholon.com/dien-thoai-di-dong-apple
+
+[www.stellarinfo.co.in]
+match = 0.0%%
+title = 
+url = https://www.stellarinfo.co.in/blog/video-dxgkrnl-fatal-error-in-windows-10/
 
