--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-17 22:35:06
+lastsearch = 2024-07-18 01:53:19
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = -14.3%%
-title = The Jungle Book (2016)
-url = https://www.imdb.com/title/tt3040964/
+match = 0.0%%
+title = Green Book (2018)
+url = https://www.imdb.com/title/tt6966692/
 
 [www.etsy.com]
 match = 35.7%%
@@ -42,9 +42,9 @@ title = I am a 19-year-old male. My chest size is 38, waist 36 bicep ...
 url = https://www.quora.com/I-am-a-19-year-old-male-My-chest-size-is-38-waist-36-bicep-12-weight-73-kg-and-BMI-23-What-would-I-have-to-do-to-get-to-a-32-waist
 
 [books.google.com]
-match = -292.9%%
-title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+xanh+16&source=bl&ots=luPmsQzQMi&sig=ACfU3U2faEYqXSrmcpntjyk3cK0DoEWIbg&hl=en&sa=X&ved=2ahUKEwjX_-ipuKyHAxV5rokEHX_tCn0Q6AF6BAhBEAM
+match = -300.0%%
+title = Minority Groups in North Vietnam - Page 153 - Google Books Result
+url = https://books.google.com/books?id=ZRZwetkStM4C&pg=PA153&lpg=PA153&dq=man+re+xanh+16&source=bl&ots=RbPz2eFEFf&sig=ACfU3U2ZdeuEgnxRIiSFWmZIGNCz8pYL_Q&hl=en&sa=X&ved=2ahUKEwir6sTO366HAxXiMlkFHbaDAywQ6AF6BAgWEAM
 
 [mobilecity.vn]
 match = -207.1%%
