--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-17 20:51:06
+lastsearch = 2024-07-18 01:53:33
 
 [munghoangphat.com]
-match = -24.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = 48.0%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [tiki.vn]
-match = -36.0%%
-title = Màn chụp tự bung đỉnh vuông tiến đạt hàng chính hãng, ...
-url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông tiến đạt
+match = -28.0%%
+title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -48.0%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = -28.0%%
+title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [www.mungbaobao.com]
 match = -32.0%%
