--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-17 18:47:30
+lastsearch = 2024-07-18 01:53:45
 
 [www.youtube.com]
 match = -40.7%%
@@ -47,9 +47,9 @@ title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, h
 url = https://demxanh.com/cach-lam-phong-ruot-goi.html
 
 [www.thegioididong.com]
-match = -55.6%%
-title = Cách xóa chặn cuộc gọi trên iPhone, điện thoại Android ...
-url = https://www.thegioididong.com/hoi-dap/tat-che-do-chan-cuoc-goi-tren-samsung-galaxy-note-604459
+match = -44.4%%
+title = Cách chặn tất cả cuộc gọi đến Viettel, MobiFone ...
+url = https://www.thegioididong.com/hoi-dap/cach-chan-cuoc-goi-den-mang-viettel-mobifone-vinaphone-1363346
 
 [dienmaycholon.vn]
 match = -44.4%%
